peac_dev/force-app/main/default/objects/Escalation__c/Escalation__c.object-meta.xml
<CustomObject>
    <label>Escalation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>