peac_dev/force-app/main/default/objects/Escalation__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Escalations</relationshipLabel>
    <relationshipName>Escalations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>