peac_dev/force-app/main/default/objects/Escalation__c/fields/Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escalation Date</label>
    <type>Date</type>
</CustomField>