peac_dev/force-app/main/default/objects/Escalation__c/fields/Escalation_Type__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Type__c</fullName>
    <label>Escalation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>Others?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>