peac_dev/force-app/main/default/objects/Escalation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Contract__c</columns>
    <columns>Escalation_Date__c</columns>
    <columns>Escalation_Amount__c</columns>
    <columns>Escalation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>